--- a/packages/SystemUI/res/layout/status_bar_expanded.xml
+++ b/packages/SystemUI/res/layout/status_bar_expanded.xml
@@ -56,7 +56,6 @@
             android:id="@+id/exp_power_stat"
             android:layout_width="match_parent"
             android:layout_height="@dimen/notification_panel_widget_height"
-            android:layout_marginTop="44dip"
         />
         <TextView
             android:id="@+id/emergency_calls_only"
@@ -73,8 +72,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fadingEdge="none"
-            android:overScrollMode="ifContentScrolls"
-            android:layout_marginTop="@dimen/notification_panel_header_and_widget"
+            android:overScrollMode="always"
             >
             <com.android.systemui.statusbar.policy.NotificationRowLayout
                 android:id="@+id/latestItems"
