--- a/packages/SystemUI/res/layout/system_bar_notification_area.xml
+++ b/packages/SystemUI/res/layout/system_bar_notification_area.xml
@@ -124,7 +124,7 @@
                 android:visibility="gone"
                 />
             <TextView
-                android:id="@+id/dock_battery_text"
+                android:id="@+id/battery_text"
                 android:textAppearance="@style/TextAppearance.StatusBar.Battery"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -134,11 +134,14 @@
                 android:layout_marginRight="-3dip"
                 android:gravity="center_vertical|left"
                 />
-            <ImageView
-                android:id="@+id/dock_battery"
-                android:layout_height="wrap_content"
+            <com.android.systemui.statusbar.policy.CircleBattery
+                android:id="@+id/dock_circle_battery"
                 android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:singleLine="true"
                 android:paddingLeft="4dip"
+                android:layout_marginRight="-3dip"
+                android:gravity="center_vertical|left"
                 />
             <ImageView
                 android:id="@+id/battery"
